# ASGE-Platformer

PacManASGE/: README.md
PacManASGE/src/: CMakeLists.txt
PacManASGE/src/game/: GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  SpriteComponent.cpp  SpriteComponent.hpp  Vector2.cpp  Vector2.hpp  game.cpp  game.h  main.cpp
